fixing smoooothscroll anchor on homepage (was dropping too low)

--- a/webroot/css/site.css
+++ b/webroot/css/site.css
@@ -72,6 +72,7 @@ icon {display: inline-block; margin: 0 0 0 0; padding: 0; font-family: Entypo; f
 .splash > section:nth-child(2n) {background: #fff;}
 .splash > section > .content {width: 1001px; margin: 0 auto; padding: 60px 0;}
 /*.splash > section h1 {margin: 0 0 0.55em 0; font-size: 1.7em; font-family: 'Roboto Condensed'; font-style: italic; font-weight: 300; text-transform: uppercase; letter-spacing: 0.1em; color: #888;}*/
+.splash #more-info {margin-top: -46px;}
 .splash > section h1 {margin: 0 0 0.55em 0; font-size: 1.7em; color: #666;}
 .splash > section h2 {color: #666;}
 .splash ul.triplet {margin: 0; padding: 0; list-style: none;}
